# cTools

./: .gitignore  README.md  components.d.ts  package.json  vite.config.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  system_commands.rs
src-tauri/src/core/file/: file_api.rs  file_hash.rs  mod.rs
src-tauri/src/core/system/: mod.rs  sys_info.rs  tray.rs
src/assets/styles/: index.scss
src/components/charts/: baseChart.vue
src/components/editor/: index.vue  useCodeMirror.js
src/components/image/: index.vue
src/components/svgIcon/: index.vue
src/layout/headerBar/: pluginBar.vue  searchBar.vue
src/router/: index.ts
src/store/modules/: theme.ts
src/utils/: file.ts  formatters.ts  tray.ts  window.ts
src/views/home/: index.vue
src/views/plugins/: index.vue  pluginList.vue  plugins.ts
src/views/plugins/clipboard/: index.vue
src/views/plugins/components/: pluginHeader.vue
src/views/plugins/fileHasher/: index.vue
src/views/plugins/fileOrganizer/: index.vue
src/views/plugins/fileTreeJson/: index.vue
src/views/plugins/jsonEditor/: index.vue
src/views/plugins/sqlConverter/: index.vue
src/views/plugins/systemInfo/: index.vue
src/windows/: actions.js  index.js
